----------------------------------------------------------------------------

SimGrid (3.24.1) NOT RELEASED YET (v3.25 expected December 22. 2029, 04:19 UTC)

Important user-visible changes:
- Improve the Python usability (stability and documentation).
  - A nasty synchronization bug was ironed out, see also below.
  - Python's doc was organized as a separate tree, now integrated with C++.
  - C bindings of S4U were not part of the doc.
  - The C++ doc was also improved as methods are now split by theme.
- Further deprecate MSG: you now have to pass -Denable_msg=ON to cmake.
  - This is mandatory to use the Java bindings.
  - OFF by default; The plan is to completely remove MSG by 2020Q4 or 2021Q1.
- SimDAG++: Automatic dependencies on S4U activities (experimental)
  - Some features are already implemented but not all of them
  - Cannot block an activity until it's scheduled on a resource
  - No heterogeneous wait_any() that would mix Exec/Comm/Io activities.
  - See examples/s4u/{io,exec,comm}-dependent for what's already there.



General:
- Upgrade documented Java dependency to Java 8 (earlier versions don't work).
- Drop support for Viva/Triva (old visualization tools), hence removed
  TRACE_get_node_types() and TRACE_get_edge_types() functions.

Python:
- Require pybind11 version 2.4.
- Greatly improve locking during context switches with Python.
  - Declaring Python callbacks to this_actor::on_exit is now working.
  - No more tests are failing currently, even on win32.

S4U:
- Actor: Merge signals on_migration_start/end into on_host_change
- Actor: Rename migrate() into set_host()
- Disk: Allow users to get the read and write nominal bandwidth values
- Exec: Implement wait_for(timeout)
- Io: Implement wait_for(timeout)

XML:
- Parse errors now raise a simgrid::ParseError that you may want to catch.

Kernel:
- In simgrid::kernel::resource::Model, the methods next_occuring_event*() have